# reservoarr

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  justfile  pyproject.toml  reservoarr.py  reservoir.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-tag.yml  ci.yml  release.yml
docs/: INVARIANTS.md  PLUGIN_REGISTRY_SUBMISSION.md  TELEMETRY.md  TUNABLES.md
plugin/: plugin.json  plugin.py
tests/: conftest.py
tests/e2e/: harness.py  test_baseline.py  test_cc_corruption.py  test_forced_eof.py  test_long_stall.py  test_short_stall.py
tests/unit/: test_pacing.py  test_reconnect_precedence.py  test_ts_alignment.py  test_ts_detector.py  test_ts_parser.py
tools/: build_zip.sh  cdn_sim.py  check_versions.py  make_corrupt_ts.py  make_synth_ts.sh  parsecheck.py  smoke_channel.sh
